--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <script src="http://chameleonlauncher.com/widgets/common/js/chameleon.js" type="text/javascript"></script>
     <script src="http://chameleonlauncher.com/widgets/common/js/chameleon.jquery.js" type="text/javascript"></script>
     <script src="js/underscore-min.js" type="text/javascript"></script>
-    <script src="js/gecko/gecko.js" type="text/javascript"></script>
+    <script src="js/gecko.js" type="text/javascript"></script>
     <script src="js/500px.js" type="text/javascript"></script>
     <script src="js/shared.js" type="text/javascript"></script>
     <script src="js/ICanHaz.js" type="text/javascript"></script>
