--- a/index.html
+++ b/index.html
@@ -2,26 +2,30 @@
 <html>
   <head>
     <title>500px</title>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no" />
-    <link rel="stylesheet" href="http://chameleonlauncher.com/widgets/common/css/chameleon.css" />
-    <link rel="stylesheet" href="css/widget.css" />
-    <script src="http://code.jquery.com/jquery-1.7.1.min.js" type="text/javascript"></script>
-    <script src="http://chameleonlauncher.com/widgets/common/js/chameleon.js" type="text/javascript"></script>
-    <script src="http://chameleonlauncher.com/widgets/common/js/chameleon.jquery.js" type="text/javascript"></script>
-    <script src="js/underscore-min.js" type="text/javascript"></script>
-    <script src="js/gecko.js" type="text/javascript"></script>
-    <script src="js/500px.js" type="text/javascript"></script>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no, target-densitydpi=device-dpi">
+    <link rel="stylesheet" href="//chameleon.teknision.com/widgets/common/css/chameleon.css">
+    <link rel="stylesheet" href="//widgetgecko.com/common/css/widget.css">
+    <link rel="stylesheet" href="css/widget.css">
+    <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/jquery/1.9.1/jquery.js"></script>
+    <script type="text/javascript" src="//chameleon.teknision.com/widgets/common/js/chameleon.server.js"></script>
+    <script type="text/javascript" src="//chameleon.teknision.com/widgets/common/js/chameleon.jquery.js"></script>
+    <script type="text/javascript" src="//chameleon.teknision.com/widgets/common/js/chameleon.localization.jquery.js"></script>
+    <script type="text/javascript" src="//widgetgecko.com/common/js/utils.js"></script>
+    <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/underscore.js/1.4.4/underscore-min.js"></script>
+    <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/ICanHaz.js/0.10/ICanHaz.min.js "></script>
+    <script src="js/lib/gecko.js" type="text/javascript"></script>
+    <script src="js/lib/500px.js" type="text/javascript"></script>
     <script src="js/shared.js" type="text/javascript"></script>
-    <script src="js/ICanHaz.js" type="text/javascript"></script>
-    <script src="js/index.main.js" type="text/javascript"></script>
+    <script src="js/widget.js" type="text/javascript"></script>
   </head>
   <body>
     <div id="chameleon-widget"></div>
     <script id="photo" type="text/html">
       <div class="photo-div" data-id="{{ id }}">
-        <img src="{{ image_url }}" />        
+        <img src="{{ image_url }}" />
       </div>
     </script>
+  </body>
   </body>
 </html>
