--- a/settings.html
+++ b/settings.html
@@ -1,19 +1,23 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Settings</title>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no" />
-    <link rel="stylesheet" href="http://chameleonlauncher.com/widgets/common/css/chameleon.css" />
-    <link rel="stylesheet" href="http://chameleonlauncher.com/widgets/common/css/chameleon-settings.css" />
-    <link rel="stylesheet" href="css/settings.css" />
-    <script src="http://code.jquery.com/jquery-1.7.1.min.js" type="text/javascript"></script>
-    <script src="http://chameleonlauncher.com/widgets/common/js/chameleon.js" type="text/javascript"></script>
-    <script src="http://chameleonlauncher.com/widgets/common/js/chameleon.jquery.js" type="text/javascript"></script>
-    <script src="js/underscore-min.js" type="text/javascript"></script>
-    <script src="js/gecko.js" type="text/javascript"></script>
-    <script src="js/shared.js" type="text/javascript"></script>
-    <script src="js/settings.main.js" type="text/javascript"></script>
+    <title>500px Settings</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no, target-densitydpi=device-dpi">
+    <link rel="stylesheet" href="//chameleon.teknision.com/widgets/common/css/chameleon.css">
+    <link rel="stylesheet" href="//chameleon.teknision.com/widgets/common/css/chameleon-settings.css">
+    <link rel="stylesheet" href="//widgetgecko.com/common/css/settings.css">
+    <link rel="stylesheet" href="css/settings.css">
+    <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/1.9.1/jquery.js"></script>
+    <script type="text/javascript" src="//chameleon.teknision.com/widgets/common/js/chameleon.server.js"></script>
+    <script type="text/javascript" src="//chameleon.teknision.com/widgets/common/js/chameleon.js"></script>
+    <script type="text/javascript" src="//chameleon.teknision.com/widgets/common/js/chameleon.jquery.js"></script>
+    <script type="text/javascript" src="//chameleon.teknision.com/widgets/common/js/chameleon.localization.jquery.js"></script>
+    <script type="text/javascript" src="//widgetgecko.com/common/js/utils.js"></script>
+    <script type="text/javascript" src="//widgetgecko.com/common/js/settings.js"></script>
+    <script type="text/javascript" src="js/lib/gecko.js" type="text/javascript"></script>
+    <script type="text/javascript" src="js/shared.js" type="text/javascript"></script>
+    <script type="text/javascript" src="js/widget.js" type="text/javascript"></script>
   </head>
   <body>
     <div id="chameleon-widget-settings">
@@ -21,12 +25,12 @@
       <div id="widget-settings">
         <form class="form-horizontal">
           <fieldset>
-            <div class="control-group">     
+            <div class="control-group">
             <label class="control-label">Feed Type</label>
             <p class="help">Select which of the 500px public feeds to display.</p>
             <div class="controls">
               <a href="#" id="feed_select" class="selectbox"></a>
-            </div>            
+            </div>
           </div>
           <div class="control-group">
             <label class="control-label">Include Nudity</label>
